# lua-nil-guard

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SYSTEM_BLUEPRINT.md  chat.md  plan.md  plan2.md  plan3.md  plan4.md  plan5.md  pyproject.toml
config/: backend.json  domain_knowledge.json  preprocessor_files.json  sink_rules.json  trace_policy.json
docs/: annotations.md  gemini-playbook.md  gemini-playbook.zh-CN.md  prompting.md  run-tuning.md  sink-rules.md
internal/: architecture-v2-llm-agent-first.md  architecture-v3.md  business-design-v3.md  chat.md  core-nil-hazard-product-direction.md  expected-design-v3.md  long-term-semantic-architecture.md  plan.md  plan5-gap-audit.md  preprocessor-macro-cache-design.md  preprocessor-macro-dictionary-design.md  semantic-expansion-strategy.md  test-design-v3.md
tests/: test_adjudication.py  test_adjudication_mode_routing.py  test_agent_backend.py  test_agent_backend_onboarding_skill.py  test_agent_driver_manifest.py  test_agent_protocols.py  test_annotation_coverage.py  test_annotation_cross_function.py  test_annotations.py  test_baseline.py  test_calibration.py  test_cli.py  test_cli_agent_backend.py  test_collector.py  test_config_loader.py  test_evidence_preparation.py  test_fact_dependencies.py  test_file_fingerprint.py  test_incremental.py  test_knowledge.py  test_knowledge_refresh.py  test_mvp_agent_semantic_suite.py  test_mvp_ast_stress_suite.py  test_mvp_demo.py  test_mvp_semantic_suite.py  test_parser_backend.py  test_pipeline.py  test_preprocessor.py  test_prompt_export.py  (+13 more)
(+87 files in other folders)
