[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lua-nil-guard"
version = "0.1.0"
description = "High-precision Lua nil risk review tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tree-sitter>=0.25.2"]

[project.scripts]
lua-nil-guard = "lua_nil_review_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
